--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
-    "workbench.colorTheme": "Palenight Theme",
+    "workbench.colorTheme": "Palenight (Mild Contrast)",
     "editor.fontSize": 17,
     "editor.fontFamily": "Fira Code",
     "zenMode.hideLineNumbers": false,
     "search.showLineNumbers": true,
     "files.autoSave": "afterDelay",
-    "editor.cursorStyle": "line",
-    "editor.wordWrap": "on"
+    "editor.cursorStyle": "block",
+    "editor.wordWrap": "on",
+    "editor.cursorBlinking": "expand"
 }
